finangle schema types to be more typescript friendly
