# src/routes.ts
@@ -39,7 +39,7 @@ const models: TsoaRoute.Models = {
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Pick_PlantDataDocument.Exclude_keyofPlantDataDocument._id__": {
         "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"__typename":{"dataType":"enum","enums":["PlantData"]},"bloomColors":{"dataType":"array","array":{"dataType":"string"}},"bloomTimes":{"dataType":"array","array":{"dataType":"string"}},"commonNames":{"dataType":"array","array":{"dataType":"string"}},"habitat":{"dataType":"string"},"hardiness":{"dataType":"array","array":{"dataType":"double"}},"height":{"ref":"PlantSize"},"isPerennial":{"dataType":"boolean"},"lightLevels":{"dataType":"array","array":{"dataType":"string"}},"maturityTime":{"dataType":"string"},"scientificName":{"dataType":"string","required":true},"soilTypes":{"dataType":"array","array":{"dataType":"string"}},"spread":{"ref":"PlantSize"},"uses":{"dataType":"array","array":{"dataType":"string"}},"otherTraits":{"ref":"Record_string.string_"},"occurrenceCoords":{"dataType":"array","array":{"dataType":"array","array":{"dataType":"double"}}},"mediaUrls":{"dataType":"array","array":{"dataType":"string"}},"occurrenceIds":{"dataType":"array","array":{"dataType":"double"}},"scrapeSources":{"dataType":"array","array":{"dataType":"string"}}},"validators":{}},
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"occurrenceCoords":{"dataType":"array","array":{"dataType":"array","array":{"dataType":"double"}}},"mediaUrls":{"dataType":"array","array":{"dataType":"string"}},"occurrenceIds":{"dataType":"array","array":{"dataType":"double"}},"__typename":{"dataType":"enum","enums":["PlantData"]},"bloomColors":{"dataType":"array","array":{"dataType":"string"}},"bloomTimes":{"dataType":"array","array":{"dataType":"string"}},"commonNames":{"dataType":"array","array":{"dataType":"string"}},"habitat":{"dataType":"string"},"hardiness":{"dataType":"array","array":{"dataType":"double"}},"height":{"ref":"PlantSize"},"isPerennial":{"dataType":"boolean"},"lightLevels":{"dataType":"array","array":{"dataType":"string"}},"maturityTime":{"dataType":"string"},"scientificName":{"dataType":"string","required":true},"soilTypes":{"dataType":"array","array":{"dataType":"string"}},"spread":{"ref":"PlantSize"},"uses":{"dataType":"array","array":{"dataType":"string"}},"otherTraits":{"ref":"Record_string.string_"},"scrapeSources":{"dataType":"array","array":{"dataType":"string"}}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Omit_PlantDataDocument._id_": {
